# haskell-seminar

./: Ciphers.hs  LICENSE  README.md  Seminar.hs
Polynome/: Polynome.cabal  Polynome.hs
